ProGuard対策&改良